@@ -4,6 +4,7 @@
 	  renamed to mt32emu-qt_WITH_ALSA_MIDI_SEQUENCER for consistency, and is now set to TRUE by default on Linux systems only.
 	* Added handling of fragmented SysExes in ALSA MIDI driver.
 	* Improved CoreAudio driver: CoreAudioStream no longer renders data in the GUI thread, a dedicated internal AudioQueue thread is used instead.
+	* Improved MIDI timing calculations. Introduced MIDI latency autodetection mode (initiated by setting MIDI latency to 0).
 	* Added build option mt32emu-qt_WITH_DEBUG_WINCONSOLE. It controls whether a debugging console is shown on Windows.
 	* Fixed a bug in LinearResampler that may cause incorrect output at beginning of each audio block.
 	* Introduced full-featured internal resampler. The intention is to make resampling less demanding than libsamplerate requires
